--- a/react-tabs/src/components/JobTitle/JobTitle.scss
+++ b/react-tabs/src/components/JobTitle/JobTitle.scss
@@ -8,6 +8,7 @@
     text-align: center;
     align-items: center;
     justify-content: left;
+    margin: 0 10px;
 
     &-border {
       width: 100%;
@@ -46,7 +47,7 @@
     &__container {
       display: flex;
       flex-direction: row;
-      margin-top: 1rem;
+      margin: 1rem 0 0 0;
       &-border {
         width: 2px;
         height: 80%;
